--- a/Mad.html
+++ b/Mad.html
@@ -1088,6 +1088,29 @@
       /* Kategori: Dessert */
       "Dessert": {
 
+      "Brownies med brunede smør": {
+        "Ingredienser": [
+          "170 g smør",
+          "80 g kakao",
+          "3 æg",
+          "170 g sukker",
+          "120 g brun farin",
+          "100 g hvedemel",
+          "1 knivspids salt",
+          "1 teskefuld vaniljepulver",
+          "90 g hakket chokolade"
+        ],
+        "Fremgangsmåde": [
+          "Smelt smørret i en gryde og lad det brune forsigtigt under omrøring, indtil det dufter nøddeagtigt.",
+          "Tilsæt kakaoen til smørret og rør godt, så det bliver en ensartet blanding.",
+          "I en skål, pisk æggene sammen med sukker og brun farin, indtil blandingen bliver luftig.",
+          "Vend forsigtigt smør/kakao-blandingen i ægge-sukkerblandingen.",
+          "Tilsæt mel, vaniljepulver, salt og hakket chokolade. Rør forsigtigt sammen, indtil alt er godt blandet.",
+          "Hæld dejen i et smurt fad og bag i ovnen på 175 grader i ca. 20-25 minutter.",
+          "Lad browniesene køle af, skær dem i firkanter og servér."
+        ]
+      },
+        
         "Nutella-banan pizza": {
           "Ingredienser": [
             "Nutella",
