--- a/Mad.html
+++ b/Mad.html
@@ -338,7 +338,7 @@
       "Retter med brød og lign.": {
 
         
-      "De bedste tarteletter": {
+      "De bedste tarteletter (18 stk)": {
         "Ingredienser": [
           "2 dåser aspargesvæde",
           "3 dl fløde",
