--- a/Mad.html
+++ b/Mad.html
@@ -128,11 +128,11 @@
         ]
       },
         
-        "Jons 48 timers pizzadej på røremaskine - 4 deje": {
+        "Jons 48 timers pizzadej (62%) på røremaskine - 4 deje": {
           "Ingredienser": [
             "600g Caputo pizzamel (fx den røde 'Cuoco')",
-            "415g kold vand",
-            "1,5-2g frisk gær eller 1/3 tsk tørgær",
+            "375g kold vand",
+            "1,5-2g frisk gær eller 1/2 tsk tørgær",
             "16 g fint salt"
           ],
           "Fremgangsmåde": [
@@ -142,7 +142,7 @@
               "Fold dejen på køkkenbordet og lad den hvile i 20-30 minutter under en skål.",
               "Spænd dejen op til en fast kugle og læg den i en lufttæt beholder.",
               "Stil dejen i køleskabet i mindst 48 timer (kan holde 5-6 dage med Caputo-mel).",
-              "3-5 timer før brug: Tag dejen ud, vej 250-275 g pr. pizzakugle, spænd dem op, og lad dem hvile i en lufttæt beholder ved stuetemperatur.",
+              "3-5 timer før brug: Tag dejen ud, vej 240g pr. pizzakugle, spænd dem op, og lad dem hvile i en lufttæt beholder ved stuetemperatur.",
             ]
           },
 
