--- a/Mad.html
+++ b/Mad.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="Madideer">
+  <meta name="apple-mobile-web-app-title" content="Madopskrifter">
   <link rel="apple-touch-icon" sizes="192x192" href="app-ikon2.png">
   <link rel="icon" type="image/png" sizes="192x192" href="app-ikon2.png">
   <link rel="manifest" href="/manifest.json">
