--- a/Mad.html
+++ b/Mad.html
@@ -74,7 +74,7 @@
 </head>
 
 <body>
-  <h1>Mad ideer</h1>
+  <h1>Madopskrifter</h1>
   <div class="food-type-dropdown">
     <label for="foodType">Vælg type af mad: </label>
     <select id="foodType"></select>
