--- a/Mad.html
+++ b/Mad.html
@@ -749,7 +749,7 @@
 
         "Thai Red Curry med Ris": {
           "Ingredienser": [
-            "500 g kyllingelår, skåret i 1,5 cm tern",
+            "500 g udbenede kyllingelår, skåret i 1,5 cm tern",
             "400 ml kokosmælk",
             "200 g gulerødder, skåret i mundrette stykker",
             "1 stor løg, skåret i tynde skiver",
