--- a/Mad.html
+++ b/Mad.html
@@ -741,7 +741,7 @@
             "Tilsæt grøn currypasta og steg sammen et par minutter",
             "Tilføj kylling og steg et par minutter",
             "Tilføj hønse bouillon og resten af koksmælken og lad det koge lidt",
-            "Tilsæt squash og tomat og kog et par minutter. Smag til med soya, fiskesauce, sukker",
+            "Tilsæt squash og tomat og kog et par minutter. Smag til med fiskesauce, sukker",
             // ... (tilføj evt. flere trin efter behov)
           ]
         },
@@ -769,7 +769,7 @@
             "Tilsæt skårede gulerødder og løg, og sauter i yderligere 2-3 minutter, indtil grøntsagerne bliver møre.",
             "Hæld kokosmælk i panden og tilsæt fiskesauce, sojasauce og rørsukker. Rør godt rundt og lad det simre i ca. 10-15 minutter, indtil saucen tykner lidt.",
             "Tilsæt strimlet rød peberfrugt, forårsløg og Thai basilikum, og kog i yderligere 2-3 minutter, indtil peberfrugten er møre.",
-            "Smag til med mere fiskesauce, sojasauce eller sukker efter behov.",
+            "Smag til med mere fiskesauce, sukker efter behov.",
             "Server straks over kogte jasminris."
           ]
         },
