--- a/Mad.html
+++ b/Mad.html
@@ -767,7 +767,7 @@
             "I en stor pande, varm vegetabilsk olie over medium varme. Tilsæt rød karrypasta, hakket ingefær og hakket hvidløg. Sauter i et minut, indtil det bliver aromatisk.",
             "Tilsæt kyllingetern og brun dem, indtil de er gyldne på alle sider.",
             "Tilsæt skårede gulerødder og løg, og sauter i yderligere 2-3 minutter, indtil grøntsagerne bliver møre.",
-            "Hæld kokosmælk i panden og tilsæt fiskesauce, sojasauce og rørsukker. Rør godt rundt og lad det simre i ca. 10-15 minutter, indtil saucen tykner lidt.",
+            "Hæld kokosmælk i panden og tilsæt fiskesauce, og rørsukker. Rør godt rundt og lad det simre i ca. 10-15 minutter, indtil saucen tykner lidt.",
             "Tilsæt strimlet rød peberfrugt, forårsløg og Thai basilikum, og kog i yderligere 2-3 minutter, indtil peberfrugten er møre.",
             "Smag til med mere fiskesauce, sukker efter behov.",
             "Server straks over kogte jasminris."
