--- a/Mad.html
+++ b/Mad.html
@@ -587,7 +587,7 @@
 
 
       /* Kategori: Ris */
-      "Risretter": {
+      "Risretter og ramen": {
         
       "Ris der ikke klistrer": {
         "Ingredienser": [
@@ -606,6 +606,30 @@
           "Sluk for varmen og lad risene hvile i 5 minutter inden servering."
         ]
       },
+
+        "Ramen med oksekød": {
+"Ingredienser": [
+"1 dåse kokosmælk",
+"0.5 liter vand",
+"2-3 tsk gochujang",
+"2-3 fed hvidløg (finthakket eller presset)",
+"2-3 tsk revet ingefær",
+"2 stk. oksekødsbouillonterninger",
+"200 g hakket oksekød",
+"10 stk. pak choi-blade",
+"2 stk. æg",
+"100 g udon-nudler",
+"Lidt sesamolie"
+],
+"Fremgangsmåde": [
+"Kog kokosmælk, vand, gochujang, hvidløg, ingefær og bouillon op i en gryde.",
+"Brun det hakkede oksekød sprødt på en pande ved siden af.",
+"Tilføj pak choi til den varme suppe 3 minutter inden servering.",
+"Kog æggene i 7 minutter, pil dem og halvér dem.",
+"Kog udon-nudlerne møre efter pakkens anvisning og dræn dem.",
+"Fordel nudler i skåle, hæld suppe over og top med kød, æg og sesamolie."
+]
+},
 
         "Den bedste kylling i karry": {
           "Ingredienser": [
